sample/apple.my-ns.ingress.regx.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/server-snippet: |
      if ($uri ~* "/apple1/.*") {
          rewrite ^/apple1/(.*) /$1 break;
      }
    nginx.ingress.kubernetes.io/use-regex: "true"
  name: rancher-k8s-ingress
  namespace: my-ns
spec:
  rules:
  - host: localhost
    http:
      paths:
      - backend:
          service:
            name: apple-service
            port:
              number: 5678
        path: /apple
        pathType: Prefix 
status:
  loadBalancer:
    ingress:
    - hostname: localhost
