sample/apple.my-ns.ingress.rewrite.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/rewrite-target: /$1
  name: rancher-k8s-ingress
  namespace: my-ns
spec:
  rules:
  - host: localhost
    http:
      paths:
      - backend:
          service:
            name: apple-service
            port:
              number: 5678
        path: /apple/banana/(.*)
        pathType: Prefix 
      - backend:
          service:
            name: apple-service
            port:
              number: 5678
        path: /apple/(.*)
        pathType: Prefix 
status:
  loadBalancer:
    ingress:
    - hostname: localhost
