sample/apple.my-ns.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/rewrite-target: /
  name: rancher-k8s-ingress
  namespace: my-ns
spec:
  rules:
  - host: localhost
    http:
      paths:
      - backend:
          service:
            name: apple-service
            port:
              number: 5678
        path: /apples_bana
        pathType: Prefix 
status:
  loadBalancer:
    ingress:
    - hostname: localhost
