sample/ingress-rancher-k8s.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rancher-k8s-ingress
  namespace: cattle-system
  annotations:
    nginx.ingress.kubernetes.io/rancherk8s: http://rancher-k8s.cattle-system.svc.cluster.local:80
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: localhost
    http:
      paths:
        - path: /rancher
          pathType: Prefix
          backend:
            service:
              name: rancher-k8s
              port:
                number: 80
